Make background color of images in chip white This ensures that the images are always legible.

--- a/ResumeApp/wwwroot/css/app.css
+++ b/ResumeApp/wwwroot/css/app.css
@@ -104,3 +104,7 @@ a i.em {
     color: red;
     border-bottom: 1px solid red;
 }
+
+a.chip img {
+    background-color: white;
+}
